<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_color_primary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/theme_color_primary"
        android:elevation="6dp"
        android:gravity="center_vertical">

        <com.bilibili.magicasakura.widgets.TintImageView
            android:id="@+id/about_black"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:background="@drawable/card_foreground"
            android:padding="12dp"
            android:src="@drawable/ic_back_white_24dp"
            app:imageTint="@color/theme_color_icon" />

        <com.bilibili.magicasakura.widgets.TintTextView
            android:id="@+id/about_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/About"
            android:textColor="@color/theme_color_title"
            android:textSize="20sp" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/window_background" />

    <LinearLayout
        android:id="@+id/about_version_click"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="?android:selectableItemBackground"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <com.bilibili.magicasakura.widgets.TintTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/Version"
            android:textColor="@color/theme_color_title"
            android:textSize="16sp" />

        <com.bilibili.magicasakura.widgets.TintTextView
            android:id="@+id/about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="V1.0.0"
            android:textColor="@color/theme_color_message"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/window_background" />

    <FrameLayout
        android:visibility="gone"
        android:id="@+id/about_share_click"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:selectableItemBackground"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <com.bilibili.magicasakura.widgets.TintTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/share"
            android:textColor="@color/theme_color_title"
            android:textSize="16sp" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/window_background" />

    <com.bilibili.magicasakura.widgets.TintTextView
        android:id="@+id/about_rate_us_click"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/rate_us"
        android:textColor="@color/theme_color_title"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/window_background" />

    <com.bilibili.magicasakura.widgets.TintTextView
        android:id="@+id/about_help_click"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/help_feedback"
        android:textColor="@color/theme_color_title"
        android:textSize="16sp" />
</LinearLayout>
